@@ -155,3 +155,15 @@ evolver.ar <- function(graph, window, niter=5, agebins=max(vcount(graph)/7100, 1
         PACKAGE="igraph")
 }
 
+evolver.di <- function(graph, cats, niter=5,
+                      sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE,
+                      error=TRUE, debug=numeric()) {
+  if (!is.igraph(graph)) {
+    stop("Not a graph object!")
+  }
+
+  .Call("R_igraph_evolver_di", graph, as.numeric(cats), as.numeric(niter),
+        as.logical(sd), as.logical(norm), as.logical(cites), as.logical(expected),
+        as.logical(error), as.numeric(debug),
+        PACKAGE="igraph")
+}
